# farkle

./: CMakeLists.txt  buildrun.sh  configure.sh
src/: Button.cpp  Button.h  Debug.cpp  Debug.h  Dice.cpp  Dice.h  Farkle.cpp  Farkle.h  README.md  Text.cpp  Text.h  constants.h  main.cpp
tests/: FarkleTest.cpp
